backend-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-1
  labels:
    app: backend-1
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
      name: http
    - containerPort: 443
      name: https
    resources:
      requests:
        cpu: 100m
        memory: 100Mi
      limits:
        cpu: 100m
        memory: 100Mi
    volumeMounts:
    - mountPath: "/certs"
      name: nginx-ssl
      readOnly: true
    - name: nginx-conf-volume
      mountPath: /etc/nginx/nginx.conf
      subPath: nginx.conf
      readOnly: true
  volumes:
  - name: nginx-ssl
    secret:
      secretName: backend-service-tls
  - name: nginx-conf-volume
    configMap:
      name: nginx-conf
      items:
      - key: nginx.conf
        path: nginx.conf
