backend-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-1
  name: backend-1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: backend-1
  type: ClusterIP
status:
  loadBalancer: {}
